--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Hoolix - Smart Ideas for your Brand are Here</title>
+	<title>VibeDigital - Smart Ideas for your Brand are Here</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
 	<link rel="stylesheet" href="css/style.css" />
@@ -22,10 +22,10 @@
 <body>
 	<div class="header" data-header>
 		<div class="custom-container">
-			<a href="#" class="logo">Hoolix</a>
+			<a href="#" class="logo">VibeDigital</a>
 			<nav class="navbar" data-navbar>
 				<div class="wrapper">
-					<a href="#" class="logo">Hoolix</a>
+					<a href="#" class="logo">VibeDigital</a>
 
 					<button class="nav-close-btn" arial-label="close-menue" data-nav-toggler><ion-icon name="close-outline" aria-hidden="true"></ion-icon></button>
 				</div>
@@ -379,7 +379,7 @@
 		<div class="footer-top section">
 			<div class="custom-container">
 				<div class="footer-brand">
-					<a href="" class="logo">Hoolix</a>
+					<a href="" class="logo">VibeDigital</a>
 					<p class="footer-text">
 						Lorem ipsum dolor sit amet consecte tur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
 					</p>
@@ -450,7 +450,7 @@
 						<ion-icon name="location" aria-hidden="true"></ion-icon>
 
 						<address class="contact-link address">
-							4517 Washington Ave. Manchester, Kentucky 39495
+							Washington Ave. Manchester
 						</address>
 					</li>
 					<li class="footer-item">
@@ -461,7 +461,7 @@
 					<li class="footer-item">
 						<ion-icon name="mail" aria-hidden="true"></ion-icon>
 
-						<a href="mailto:info@hoolix.com" class="contact-link">info@hoolix.com</a>
+						<a href="mailto:ansari.hasib99@gmail.com" class="contact-link">ansari.hasib99@gmail.com</a>
 					</li>
 					<li class="footer-item">
 						<ul class="social-list">
@@ -487,7 +487,7 @@
 		<div class="footer-bottom">
 			<div class="custom-container">
 				<p class="copyright">
-					&copy; 2022 Hoolix | All Rights Reserved by <a href="#" class="copyright-link">codewithsadeea</a>
+					&copy; 2022 VibeDigital | All Rights Reserved by <a href="#" class="copyright-link">Haseeb Ansari</a>
 				</p>
 				<ul class="footer-bottom-list">
 					<li>
